--- a/src/ion-alpha-scroll.css
+++ b/src/ion-alpha-scroll.css
@@ -1,5 +1,5 @@
 .ion_alpha_list_outer .list{
-	padding-right: 15px;
+	padding-right: 26px;
 }
 .ion_alpha_list_outer .item{
 	border-right: none;
@@ -9,7 +9,24 @@
 	right: 0;
 	top: 0;
 	height: 100%;
+    background: #fff;
+    width: 26px;
+    text-align: center;
+    border-left: 1px solid #f5f5f5;
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    height: 90vh;
 }
+
 .ion_alpha_sidebar li{
 	line-height: 1.1;
+}
+
+.ion_alpha_sidebar li:first-child {
+    padding-top: 10px;
 }
